<resources>
    <string name="app_name">infogram</string>
    <string name="nombre_de_usuario">nombre de usuario</string>
    <string name="contrase_a">contraseña</string>
    <string name="button_text">LOGIN</string>
    <string name="no_tienes_cuenta">"¿No tienes cuenta?, "</string>
    <string name="crea_una_aqui" translatable="false">crea una aqui</string>
    <string name="correo">correo</string>
    <string name="nombre">nombre</string>
    <string name="usuario">usuario\n</string>
    <string name="confirmar_contrasen_a">confirme contraseña</string>
    <string name="unir">ÚNETE</string>
    <string name="title_crear_cuenta">crear cuenta</string>
    <string name="nombres">carlos vargas</string>
    <string name="hace">Hace</string>
    <string name="Dias">" 4 Dias"</string>
    <string name="like">10 me gusta</string>
    <string name="buscar_item">Buscar</string>
    <string name="home_item">Home</string>
    <string name="yo_item">Yo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home_fragment">Home</string>
</resources>