<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.createAccountActivity">
<include layout="@layout/appbar_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/padding_create_account">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Infogram.TextInputLayoutBlack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/editTextWhite"
                android:layout_marginTop="@dimen/marginTop_createAccont">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/correo"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Infogram.TextInputLayoutBlack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/editTextWhite"
                android:layout_marginTop="@dimen/marginTop_createAccont">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombre"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Infogram.TextInputLayoutBlack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/editTextWhite"
                android:layout_marginTop="@dimen/marginTop_createAccont">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/usuario"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Infogram.TextInputLayoutBlack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/editTextWhite"
                android:layout_marginTop="@dimen/marginTop_createAccont">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/contrase_a"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Infogram.TextInputLayoutBlack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/editTextWhite"
                android:layout_marginTop="@dimen/marginTop_createAccont">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirmar_contrasen_a"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                style="@style/RaseButtonDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/unir"
                android:layout_marginTop="@dimen/marginTop_createAccont"
                android:theme="@style/RaseButtonDark"
                />
        </LinearLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>