<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_cardview"
    android:layout_margin="@dimen/margin_cardview"
    app:cardCornerRadius="@dimen/corner_radius_cardview">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ImageView
            android:id="@+id/imagesCardView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/uyuni" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_cardview"
            android:layout_gravity="bottom"
            android:padding="@dimen/padding_cardview"
            android:orientation="vertical">

            <TextView
                android:id="@+id/userNameCardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombres"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hace"
                    android:textSize="14sp"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/cantidadDias"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Dias"
                    android:textSize="14sp"
                    android:textColor="@color/white"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
               <CheckBox
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:button="@drawable/chekbox_selector"/>

                <TextView
                    android:id="@+id/cantidadMeGusta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/like"
                    android:textSize="15sp"
                    android:textColor="@color/white"/>

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</androidx.cardview.widget.CardView>